fix(nav): Reset dropdown li margin/line-height to fix spacing on homepage
Add margin:0; padding:0; line-height:1 to .resume-lang-dropdown li
to prevent global post content li styles from bleeding into the dropdown.

--- a/themes/wxx-theme/source/css/_custom/custom.scss
+++ b/themes/wxx-theme/source/css/_custom/custom.scss
@@ -39,6 +39,9 @@
 
     li {
       display: block;
+      margin: 0;
+      padding: 0;
+      line-height: 1;
 
       a {
         display: block;
